5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1637_1055.log
== TEST (2019-04-11 11:07:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
vo = float(input("velocidade inicial: "))
a = radians(float(input("angulo do vetor: ")))
d = float(input("distancia: "))
g = 9.8

r = ((vo)**2) * (sin(2*a)
r1 = r/g

if (abs(r1 - d <= 0.1)):
	print("sim")
					  
else:
	print("nao")

-- ERROR:
File "XXXX", line 11
    r1 = r/g
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:08:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
vo = float(input("velocidade inicial: "))
a = radians(float(input("angulo do vetor: ")))
d = float(input("distancia: "))
g = 9.8

r = (((vo)**2) * (sin(2*a)) / g

if (abs(r - d <= 0.1)):
	print("sim")
					  
else:
	print("nao")

-- ERROR:
File "XXXX", line 12
    if (abs(r - d <= 0.1)):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:08:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
vo = float(input("velocidade inicial: "))
a = radians(float(input("angulo do vetor: ")))
d = float(input("distancia: "))
g = 9.8

r = (((vo)**2) * (sin(2*a)) / g

if(abs(r - d <= 0.1)):
	print("sim")
					  
else:
	print("nao")

-- ERROR:
File "XXXX", line 12
    if(abs(r - d <= 0.1)):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:08:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
vo = float(input("velocidade inicial: "))
a = radians(float(input("angulo do vetor: ")))
d = float(input("distancia: "))
g = 9.8

r = (((vo)**2) * (sin(2*a)) / g

if(abs(r - d) <= 0.1)):
	print("sim")
					  
else:
	print("nao")

-- ERROR:
File "XXXX", line 12
    if(abs(r - d) <= 0.1)):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:08:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
vo = float(input("velocidade inicial: "))
a = radians(float(input("angulo do vetor: ")))
d = float(input("distancia: "))
g = 9.8

r = (((vo)**2) * (sin(2*a)) / g

if(abs(r - d) <= 0.1):
	print("sim")
					  
else:
	print("nao")

-- ERROR:
File "XXXX", line 12
    if(abs(r - d) <= 0.1):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:08:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
vo = float(input("velocidade inicial: "))
a = radians(float(input("angulo do vetor: ")))
d = float(input("distancia: "))
g = 9.8

r = (((vo)**2) * (sin(2*a)) / g

if(abs(r - d) <= 0.1):
	print("sim")
					  
else:
	print("nao")

-- ERROR:
File "XXXX", line 12
    if(abs(r - d) <= 0.1):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:11:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
vo = float(input("velocidade inicial: "))
a = radians(float(input("angulo do vetor: ")))
d = abs(float(input("distancia: ")))
g = 9.8

r = ((vo)**2) * sin(2*a)
r1 = r/g

if(abs(r1 - d) <= 0.1):
	print("sim")
					  
else:
	print("nao")

-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:11:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
vo = float(input("velocidade inicial: "))
a = radians(float(input("angulo do vetor: ")))
d = abs(float(input("distancia: ")))
g = 9.8

r = ((vo)**2) * sin(2*a)
r1 = r/g

if(abs(r1 - d) <= 0.1):
	print("sim")
					  
else:
	print("nao")

-- EXECUTION TIME:
0.127594
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
